Last changes for W01

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Course home page for Web & Computer Programming certificate. Responsive layout with course list and filters." />
   <meta name="author" content="Gabriel Bastardo" />
 
-  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
 
@@ -36,8 +36,8 @@
       <nav id="primary-nav" class="primary-nav" role="navigation" aria-label="Primary">
         <ul>
           <li><a href="#" class="active">Home</a></li>
-          <li><a href="">Chamber Project</a></li>
-          <li><a href="">Final Project</a></li>
+          <li><a href="#">Chamber Project</a></li>
+          <li><a href="#">Final Project</a></li>
         </ul>
       </nav>
     </div>
@@ -82,6 +82,12 @@
       </div>
 
       <p id="credits-summary" class="credits">The total credits for courses listed above is <span id="creditTotal">0</span></p>
+    </section>
+
+    <section class="certificate-info">
+        <h2>Certificate Information</h2>
+        <p>The Web & Computer Programming Certificate provides foundational skills in web development, programming, and computer science concepts.</p>
+        <p>This program prepares students for entry-level positions in web development and serves as a stepping stone to further education in computer science.</p>
     </section>
   </main>
 
