--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="styles/small.css">
   <link rel="stylesheet" href="styles/large.css">
+  <link rel="icon" href="images/favicon.ico">
 
   <script src="scripts/navigation.js" defer></script>
   <script src="scripts/date.js" defer></script>
@@ -36,7 +37,7 @@
       <nav id="primary-nav" class="primary-nav" role="navigation" aria-label="Primary">
         <ul>
           <li><a href="#" class="active">Home</a></li>
-          <li><a href="#">Chamber Project</a></li>
+          <li><a href="chamber/directory.html">Chamber Project</a></li>
           <li><a href="#">Final Project</a></li>
         </ul>
       </nav>
@@ -95,10 +96,9 @@
     <div class="socials">
       <a href="https://github.com/gabozzz15" aria-label="GitHub profile" target="_blank" rel="noopener">GitHub</a>
       <a href="https://www.linkedin.com/in/gabriel-bastardo-4b1426357/" aria-label="LinkedIn profile" target="_blank" rel="noopener">LinkedIn</a>
-      <a href="#" aria-label="Other social" target="_blank" rel="noopener">X</a>
     </div>
 
-    <p>&copy; <span id="currentYear"></span> Gabriel Bastardo | Venezuela</p>
+    <p>&copy; <span id="currentYear"></span> WDD231 |Gabriel Bastardo | Venezuela</p>
     <p>Last Modification: <span id="lastModified"></span></p>
   </footer>
 </body>
