--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,8 +9,8 @@
   <!-- Facebook Meta -->
   <meta property="og:title" content="Venezuelan Chamber of Commerce Directory">
   <meta property="og:description" content="Discover Venezuelan businesses and connect through our Chamber Directory.">
-  <meta property="og:image" content="images/chamber-preview.jpg">
-  <meta property="og:url" content="https://yourdomain.com/chamber/directory.html">
+  <meta property="og:image" content="images/logo.svg">
+  <meta property="og:url" content="https://gabozzz15.github.io/wdd231/chamber/directory.html">
 
   <title>Venezuelan Chamber of Commerce | Directory</title>
   <link rel="icon" href="images/favicon.ico">
