--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <nav id="primary-nav" class="primary-nav" role="navigation" aria-label="Primary">
         <ul>
           <li><a href="#" class="active">Home</a></li>
-          <li><a href="chamber/directory.html">Chamber Project</a></li>
+          <li><a href="/chamber/directory.html">Chamber Project</a></li>
           <li><a href="#">Final Project</a></li>
         </ul>
       </nav>
