--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,12 +8,16 @@
 
   <!-- Facebook Meta -->
   <meta property="og:title" content="Venezuelan Chamber of Commerce Directory">
-  <meta property="og:description" content="Discover Venezuelan businesses and connect through our Chamber Directory.">
-  <meta property="og:image" content="images/logo.svg">
+  <meta property="og:description" content="Discover Venezuelan businesses and connect through our Chamber Directory, in this you can look for local services, products, and more.">
+  <meta property="og:image" content="https://gabozzz15.github.io/wdd231/chamber/images/logo.svg">
   <meta property="og:url" content="https://gabozzz15.github.io/wdd231/chamber/directory.html">
 
   <title>Venezuelan Chamber of Commerce | Directory</title>
   <link rel="icon" href="images/favicon.ico">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/small.css">
