last changes for w03

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,7 +8,7 @@
 
   <!-- Facebook Meta -->
   <meta property="og:title" content="Venezuelan Chamber of Commerce">
-  <meta property="og:description" content="Connecting Venezuelan businesses and fostering economic growth">
+  <meta property="og:description" content="Connecting Venezuelan businesses and fostering economic growth in a local webpage that features current events, weather updates, and member spotlights.">
   <meta property="og:image" content="https://gabozzz15.github.io/wdd231/chamber/images/logo.svg">
   <meta property="og:url" content="https://gabozzz15.github.io/wdd231/chamber/index.html">
 
