--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -44,7 +44,7 @@
 
       <nav class="primary-nav">
         <ul>
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="directory.html" class="active">Directory</a></li>
           <li><a href="#">Join</a></li>
           <li><a href="#">Discover</a></li>
