--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Venezuelan Chamber of Commerce - Home Page">
+  <meta name="description" content="Venezuelan Chamber of Commerce - Home Page. It is a local webpage that features current events, weather updates, and member spotlights.">
   <meta name="author" content="Gabriel Bastardo">
 
   <!-- Facebook Meta -->
