last changes for w04

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -3,8 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Join the Venezuelan Chamber of Commerce - Membership Application">
+  <meta name="description" content="Join the Venezuelan Chamber of Commerce - Membership Application. It is a local webpage that features current events, weather updates, and member spotlights.">
   <meta name="author" content="Gabriel Bastardo">
+
+  <!-- Facebook Meta -->
+  <meta property="og:title" content="Venezuelan Chamber of Commerce">
+  <meta property="og:description" content="Connecting Venezuelan businesses and fostering economic growth in a local webpage that features current events, weather updates, and member spotlights.">
+  <meta property="og:image" content="https://gabozzz15.github.io/wdd231/chamber/images/logo.svg">
+  <meta property="og:url" content="https://gabozzz15.github.io/wdd231/chamber/index.html">
+
 
   <title>Join Venezuelan Chamber of Commerce | Membership</title>
   <link rel="icon" href="images/favicon.ico">
