--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -3,8 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Thank You for Joining Venezuelan Chamber of Commerce">
+  <meta name="description" content="Thank You for Joining Venezuelan Chamber of Commerce. It is a local webpage that features current events, weather updates, and member spotlights.">
   <meta name="author" content="Gabriel Bastardo">
+
+  <!-- Facebook Meta -->
+  <meta property="og:title" content="Venezuelan Chamber of Commerce">
+  <meta property="og:description" content="Connecting Venezuelan businesses and fostering economic growth in a local webpage that features current events, weather updates, and member spotlights.">
+  <meta property="og:image" content="https://gabozzz15.github.io/wdd231/chamber/images/logo.svg">
+  <meta property="og:url" content="https://gabozzz15.github.io/wdd231/chamber/index.html">
 
   <title>Thank You | Venezuelan Chamber of Commerce</title>
   <link rel="icon" href="images/favicon.ico">
