--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="styles/large.css">
   <link rel="stylesheet" href="styles/discover.css">
 
-  <script src="scripts/discover.js" type="module" defer></script>
+  <script src="scripts/discover.js" type="module"></script>
 </head>
 
 <body>
