--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <ul>
           <li><a href="#" class="active">Home</a></li>
           <li><a href="/chamber/directory.html">Chamber Project</a></li>
-          <li><a href="#">Final Project</a></li>
+          <li><a href="/finalproject/index.html">Final Project</a></li>
         </ul>
       </nav>
     </div>
