--- a/finalproject/siteplan.html
+++ b/finalproject/siteplan.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,13 +12,13 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="page-container">
             <h1><i class="fas fa-newspaper"></i> News & Weather Hub - Site Plan</h1>
             <p class="tagline">Your one-stop destination for real-time news and weather updates</p>
         </div>
     </header>
     
-    <main class="container">
+    <main class="page-container">
         <!-- Site Name Section -->
         <section id="site-name">
             <h2><i class="fas fa-signature"></i> Site Name</h2>
@@ -184,7 +184,7 @@
     </main>
     
     <footer>
-        <div class="container">
+        <div class="page-container">
             <p>News & Weather Hub Site Plan | WDD 231 Individual Project | <span id="current-year"></span></p>
             <p>APIs to be integrated: NewsAPI.org & OpenWeatherMap.org</p>
         </div>
