--- a/finalproject/thank-you.html
+++ b/finalproject/thank-you.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -32,7 +32,7 @@
     
     <!-- Header -->
     <header class="site-header">
-        <div class="container">
+        <div class="page-container">
             <div class="logo">
                 <a href="index.html">
                     <img src="images/logo-weather-news.png" alt="News & Weather Hub Logo" class="logo-img">
@@ -151,7 +151,7 @@
     </main>
     
     <footer class="site-footer">
-        <div class="container">
+        <div class="page-container">
             <div class="footer-content">
                 <div class="footer-logo">
                     <img src="images/logo-weather-news.png" alt="News & Weather Hub Logo">
