--- a/finalproject/news.html
+++ b/finalproject/news.html
@@ -144,7 +144,7 @@
                 </div>
                 
                 <!-- No Results Message -->
-                <div class="no-results-message" id="no-results-message" style="display: none;">
+                <div class="no-results-message" id="no-results-message">
                     <i class="fas fa-search"></i>
                     <h4>No articles found</h4>
                     <p>Try adjusting your search or filter criteria</p>
